--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "guitarjoe",
   "version": "0.1.0",
   "private": false,
-  "homepage": "https://github.com/ChrisDeFreitas/guitarJoe/build/",
+  "homepage": "https://chrisdefreitas.github.io/guitarJoe/",
   "description":"GuitarJoe is a web based tool that allows you to visually explore the guitar fretboard, scales, chords, intervals and notes. The current version is a proof of concept.",
   "author":{
     "name": "Chris DeFreitas",
