--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "reactjs-popup": "^2.0.5",
     "redux": "^4.1.0",
     "save": "^2.4.0",
-    "tinycolor2": "^1.4.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "BUILD_PATH='./docs' react-scripts build",
     "test": "react-scripts test",
     "test-lib": "react-scripts test guitar_lib.test.js",
     "eject": "react-scripts eject"
