--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "GuitarJoe is a web based tool that allows you to visually explore the guitar fretboard, scales, chords, intervals and notes. The current version is a proof of concept.",
   "author": {
     "name": "Chris DeFreitas",
-    "email": "chrisd@europa.com"
+    "email": "ChrisDeFreitas777@gmail.com"
   },
   "repository": {
     "type": "git",
