--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guitarjoe",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": false,
   "homepage": ".",
   "description": "GuitarJoe is a web based tool that allows you to visually explore the guitar fretboard, scales, chords, intervals and notes. The current version is a proof of concept.",
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "abcjs": "^5.12.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
