--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "guitarjoe",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "private": false,
   "homepage": ".",
   "description": "GuitarJoe is a web based tool that allows you to visually explore the guitar fretboard, scales, chords, intervals and notes. The current version is a proof of concept.",
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^12.8.3",
     "abcjs": "^5.12.0",
     "framer-motion": "^4.1.17",
+    "markdown-to-jsx": "^7.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.43.4"
   }
 }
