--- a/package.json
+++ b/package.json
@@ -22,15 +22,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "reactjs-popup": "^2.0.5",
-    "save": "^2.4.0",
-    "source-map-explorer": "^2.5.2",
-    "web-vitals": "^1.1.2"
+    "reactjs-popup": "^2.0.5"
   },
   "scripts": {
     "analyze": "source-map-explorer 'docs/static/js/*.js' --html >> source-map-explorer.html",
-    "build": "BUILD_PATH='./docs' react-scripts build",
-    "start": "react-scripts start",
+    "build": "BUILD_PATH='./docs' react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test",
     "test-lib": "react-scripts test guitar_lib.test.js",
     "eject": "react-scripts eject"
